syntax = "proto3";

package finance;

option go_package = "./proto";

service FinanceService {
  rpc CreateTransaction(CreateTransactionRequest) returns (Transaction);
  rpc GetTransaction(GetTransactionRequest) returns (Transaction);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
  rpc GetBalance(GetBalanceRequest) returns (BalanceResponse);
}

message Transaction {
  string id = 1;
  string user_id = 2;
  double amount = 3;
  string type = 4; // income, expense
  string category = 5;
  string description = 6;
  int64 timestamp = 7;
}

message CreateTransactionRequest {
  string user_id = 1;
  double amount = 2;
  string type = 3;
  string category = 4;
  string description = 5;
}

message GetTransactionRequest {
  string id = 1;
}

message ListTransactionsRequest {
  string user_id = 1;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

message GetBalanceRequest {
  string user_id = 1;
}

message BalanceResponse {
  double balance = 1;
}

